--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
 </head>
 <body>
     <header>
-
-        <h1></h1>
+        <nav>
         <h2>
-            <a href="#">WebStudio</a>
+            <a href="index.html">WebStudio</a>
         </h2>
         <ul>
             <li>
-                <a href="#">Studio</a>
+                <a href="studio.html">Studio</a>
             </li>
             <li>
-                <a href="#">Portfolio</a>
+                <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a href="#">Contacts</a>
-            </li>
-            <li>
-                <a href="#">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="#">+11 (000) 111-11-11</a>
+                <a href="contacts.html">Contacts</a>
             </li>
         </ul>
+        </nav>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
+            
     </header>
     <main>
-        <section>
-            <h2>Effective Solutions
-            for Your Business</h2>
+        <section class="hero">
+            <h1>Effective Solutions
+            for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-        <section>
+
+        <section class="features">
             <h2>Our Features</h2>
             <ul>
                 <li>
@@ -65,33 +65,34 @@
                 </li>
             </ul>
         </section>
-        <section>
+
+        <section class="team">
             <h2>Our Team</h2>
             <ul>
                 <li>
                     <article>
-                            <img src="images/imgn1.jpg.jpg" alt="Mark Guerrero" width="120" height="160">   
+                            <img src="./images/imgn1.jpg.jpg" alt="Mark Guerrero" width="264" height="260">   
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                            <img src="images/imgn2.jpg" alt="Tom Ford" width="120" height="160"  style="object-fit: cover; object-position: center;">
+                            <img src="./images/imgn2.jpg" alt="Tom Ford" width="264" height="260" >
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                            <img src="images/imgn3.jpg" alt="Camila Garcia" width="120" height="160">  
+                            <img src="./images/imgn3.jpg" alt="Camila Garcia" width="264" height="260">  
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <img src="images/imgn4.jpg" alt="Daniel Wilson" width="120" height="160">
+                        <img src="./images/imgn4.jpg" alt="Daniel Wilson" width="264" height="260">
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </article>
