--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
         <h2>
-            <a href="index.html">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
         </h2>
         <ul>
             <li>
@@ -24,7 +24,7 @@
         </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
         </address>
             
@@ -101,15 +101,11 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h2>
-                <a href="#">WebStudio</a>
-            </h2>
-
+                <a href="./index.html">WebStudio</a>
         <p>
-            Increase the flow of customers with your business with digital marketing & growth solutions
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
-        </section>
+        
     </footer>
 </body>
 </html>
