--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <header>
         <nav>
-        <h2>
             <a href="./index.html">WebStudio</a>
-        </h2>
         <ul>
             <li>
                 <a href="studio.html">Studio</a>
@@ -42,25 +40,25 @@
                 <li>
                     <article>
                         <h3>Strategy</h3>
-                        <p>We develop a comprehensive strategy to ensure your business success with creative solutions.</p>
+                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3>Punctuality</h3>
-                        <p>We deliver projects on time, meeting your deadlines without compromise.</p>
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</time></p>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3>Diligence</h3>
-                        <p>We pay meticulous attention to detail at every step of our work process.</p>
+                        <p>Research andconfirm brands with the strongest digital growth opportunities and minimum risk.</p>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3>Technologies</h3>
-                        <p>We utilize the latest technologies to provide innovative solutions for your business.</p>
+                        <p>Design practice focused on digital experiences.We bring forth a deep passion for problam solving.</p>
                     </article>  
                 </li>
             </ul>
