--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                 <li>
                     <article>
                         <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</time></p>
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3>Diligence</h3>
-                        <p>Research andconfirm brands with the strongest digital growth opportunities and minimum risk.</p>
+                        <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences.We bring forth a deep passion for problam solving.</p>
+                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </article>  
                 </li>
             </ul>
